# pixel_art_generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: dataset.yaml  default.yaml
docs/research/: README.md  datasets.md  decisions.md  ideas.md  questions.md  refs.bib  sources.log.md
docs/research/papers/: 2018-deep-unsupervised-pixelization.md  2022-pixel-vqvae.md  2023-lycoris-eval.md  2023-tifa.md  2024-cmmd-rethinking-fid.md  2025-compositional-eval.md  2025-gametilenet.md  _TEMPLATE.md
docs/research/synthesis/: eval.md  lora.md  postprocess.md
docs/system/: 01-overview.md  02-architecture.md  03-data-flow.md  04-evaluation.md  05-roadmap.md  README.md
notebooks/: demo.py  train_lora.py
src/pixelforge/: __init__.py
src/pixelforge/data/: __init__.py  ingest.py  prepare.py  push.py  schema.py
src/pixelforge/eval/: __init__.py  metrics.py
src/pixelforge/pipeline/: __init__.py  config.py  generate.py
src/pixelforge/postprocess/: __init__.py  pixelate.py
src/pixelforge/training/: __init__.py  config.py  dataset.py  train_lora.py  trainer.py
tests/: test_data.py  test_eval.py  test_postprocess.py  test_training.py
