[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelforge"
version = "0.0.1"
description = "AI ile pixel art asset üretimi: pipeline + eval + (LoRA) training"
requires-python = ">=3.10"
readme = "README.md"

# ---- Çekirdek: hafif, GPU'suz. postprocess + eval bunlarla çalışır ----
# Floor (>=) kullanıyoruz: çekirdek her Python sürümünde (yerel 3.14, Colab 3.12)
# derlensin. Sert pin'ler asıl kırılgan olan [ml] stack'inde (aşağıda).
dependencies = [
    "pillow>=10.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
# ---- Ağır ML yığısı: Colab / GPU makinede kurulur ----
# Sürümler bilerek pinli. torchao BİLEREK YOK: düz LoRA quantization istemez; torchao
# kurulu olunca peft onu zorla import ediyor ve torch dtype uyumsuzluğu ('torch.int1')
# patlıyor (bkz. notebooks/demo.py + train geçmişi). Colab'da preinstalled torchao'yu
# notebook uninstall ediyor.
ml = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "diffusers==0.31.0",
    "transformers==4.44.2",
    "accelerate==0.34.2",
    "peft==0.17.0",
    "safetensors==0.4.5",
    "wandb==0.18.5",
]
# ---- Dataset: HF Hub'a versiyonlama (hafif) ----
data = [
    "huggingface-hub>=0.24",
]
# ---- Geliştirme ----
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
